feat: add openai rest inference implementation