@@ -46,6 +46,7 @@
     <module>gravitee-inference-math</module>
     <module>gravitee-inference-api</module>
     <module>gravitee-inference-onnx</module>
+    <module>gravitee-inference-rest</module>
   </modules>
   <dependencyManagement>
     <dependencies>
@@ -67,6 +68,38 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-params</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-junit5</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.5.13</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -170,6 +203,8 @@
             --add-opens java.base/java.util.regex=ALL-UNNAMED --add-opens
             java.base/java.util.stream=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED
             --add-modules jdk.incubator.vector
+            -XX:+EnableDynamicAgentLoading
+            -Xshare:off
           </argLine>
           <forkCount>1</forkCount>
           <reuseForks>true</reuseForks>
